# ludos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: guide.md
examples/dungeon_quest/: __init__.py  __main__.py  main.py
examples/dungeon_quest/content/: __init__.py  pack.py  types.py
examples/dungeon_quest/engine/: __init__.py  context.py  dice.py  state.py  types.py
examples/dungeon_quest/engine/characters/: __init__.py  inventory.py  stats.py
examples/dungeon_quest/engine/combat/: __init__.py  ai.py  resolver.py
examples/dungeon_quest/engine/dialogue/: __init__.py  runner.py
examples/dungeon_quest/engine/exploration/: __init__.py  dungeon.py  overworld.py
examples/dungeon_quest/engine/quests/: __init__.py  tracker.py
examples/dungeon_quest/engine/rendering/: __init__.py  colors.py  effects.py  (+9 more)
examples/dungeon_quest/quests/: __init__.py
examples/tic_tac_toe/: __main__.py  ai.py  main.py  rendering.py  state.py
examples/tic_tac_toe/scenes/: game.py
src/gamify/: __init__.py  engine.py  errors.py
src/gamify/display/: window.py
src/gamify/input/: bindings.py  handler.py
src/gamify/scenes/: base.py  manager.py  menu.py
src/gamify/state/: base.py  manager.py
src/ludos/: __init__.py  engine.py  errors.py  persistence.py
src/ludos/display/: window.py
src/ludos/input/: bindings.py  events.py  handler.py
src/ludos/scenes/: base.py  manager.py  menu.py
src/ludos/state/: manager.py
tests/: conftest.py  test_docs_sync.py  test_engine.py  test_errors.py  test_persistence.py
tests/test_display/: test_window.py
tests/test_input/: test_bindings.py  test_events.py  test_handler.py
tests/test_scenes/: test_base.py  test_manager.py  test_menu.py
tests/test_state/: test_base.py  test_manager.py
(+17 files in other folders)
